--- a/index.html
+++ b/index.html
@@ -19,23 +19,16 @@
     <title>Орших</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <video src="img/Galaxy.mp4" loop autoplay muted class="video"></video>
-      </div>
-      <div class="rowGolluulah">
-        <img src="img/zurag6.jpg" alt="emee" class="emeezurag" />
-        <!-- <h1 class="emeeNer">Зургаадайн Орших</h1> -->
-        <a
-          href="huuhed.html"
-          class="btn btn-primary btn-lg active emeeTobch"
-          role="button"
-          aria-pressed="true"
-          >ТАНИЛЦУУЛГА</a
-        >
+    <div class="hero-image">
+      <div class="dark-way">
+        <div class="hero-text">
+          <img src="img/zurag6.jpg" alt="zurag" class="img1" />
+          <h1>Орших</h1>
+
+          <button><a href="huuhed.html">Танилцуулга</a></button>
+        </div>
       </div>
     </div>
-    <h1></h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
