--- a/huuhed.html
+++ b/huuhed.html
@@ -15,10 +15,150 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/huuhed.css" />
 
     <title>Хүүхэд</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-4">
+          <div>
+            <img src="img/zurag6.jpg" alt="emee" />
+          </div>
+          <div>
+            <a
+              href="#"
+              class="btn btn-success btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Ээж <b>Орших</b></a
+            >
+            <a
+              href="#"
+              class="btn btn-primary btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Танилцуулга</a
+            >
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div>
+            <img src="img/zurag6.jpg" alt="emee" />
+          </div>
+          <div>
+            <a
+              href="#"
+              class="btn btn-success btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Аав <b>Дэмбэрэл</b></a
+            >
+            <a
+              href="#"
+              class="btn btn-primary btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Танилцуулга</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4">
+          <div>
+            <img src="img/zurag6.jpg" alt="emee" />
+          </div>
+          <div>
+            <a
+              href="#"
+              class="btn btn-success btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Аав <b>Дэмбэрэл</b></a
+            >
+            <a
+              href="#"
+              class="btn btn-primary btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Танилцуулга</a
+            >
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div>
+            <img src="img/zurag6.jpg" alt="emee" />
+          </div>
+          <div>
+            <a
+              href="#"
+              class="btn btn-success btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Аав <b>Дэмбэрэл</b></a
+            >
+            <a
+              href="#"
+              class="btn btn-primary btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Танилцуулга</a
+            >
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div>
+            <img src="img/zurag6.jpg" alt="emee" />
+          </div>
+          <div>
+            <a
+              href="#"
+              class="btn btn-success btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Аав <b>Дэмбэрэл</b></a
+            >
+            <a
+              href="#"
+              class="btn btn-primary btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Танилцуулга</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4">
+          <img src="img/batochir/gerbul2.jpg" alt="bat-ochir" />
+        </div>
+        <div class="col-md-4">
+          <img src="img/banzragch/banzragch1.jpg" alt="banzragch" />
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-md-4">
+          <img src="img/batochir/gerbul2.jpg" alt="bat-ochir" />
+        </div>
+        <div class="col-md-4">
+          <img src="img/banzragch/banzragch1.jpg" alt="banzragch" />
+        </div>
+        <div class="col-md-4">
+          <img src="img/banzragch/banzragch1.jpg" alt="banzragch" />
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4">
+          <img src="img/batochir/gerbul2.jpg" alt="bat-ochir" />
+        </div>
+        <div class="col-md-4">
+          <img src="img/banzragch/banzragch1.jpg" alt="banzragch" />
+        </div>
+      </div>
+    </div>
     <h1>End bugd bairlaana</h1>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
