--- a/banzragch/index.html
+++ b/banzragch/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/huuhed.css" />
+    <link rel="stylesheet" href="banzragch.css" />
 
     <title>Хүүхэд</title>
   </head>
@@ -25,7 +25,11 @@
       <div class="row justify-content-center">
         <div class="col-md-4">
           <div>
-            <img class="huuhed" src="img/zurag6.jpg" alt="emee" />
+            <img
+              class="huuhed"
+              src="../img/banzragch/banzragch1.jpg"
+              alt="banzragch"
+            />
           </div>
           <div>
             <a
@@ -33,7 +37,64 @@
               class="btn btn-success btn-md active"
               role="button"
               aria-pressed="true"
-              >Ээж <b>Орших</b></a
+            >
+              <b>Банзрагч</b></a
+            >
+            <a
+              href="#"
+              class="btn btn-primary btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Танилцуулга</a
+            >
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div>
+            <img
+              class="huuhed"
+              src="../img/banzragch/dogsom.jpg"
+              alt="dogsom"
+            />
+          </div>
+          <div>
+            <a
+              href="#"
+              class="btn btn-success btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Нөхөр <b>Догсом</b></a
+            >
+            <a
+              href="#"
+              class="btn btn-primary btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Танилцуулга</a
+            >
+          </div>
+        </div>
+      </div>
+      <div>
+        <h1 style="text-align: center;">Хүүхдүүд</h1>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4">
+          <div>
+            <img
+              class="huuhed"
+              src="../img/banzragch/enkhbaatar/d_enkhbaatar1.jpg"
+              alt="enkhbaatar"
+            />
+          </div>
+          <div>
+            <a
+              href="#"
+              class="btn btn-success btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Хүү <b>Энхбаатар</b></a
             >
             <a
               href="#"
@@ -46,7 +107,11 @@
         </div>
         <div class="col-md-4">
           <div>
-            <img class="huuhed" src="img/zurag6.jpg" alt="emee" />
+            <img
+              class="huuhed"
+              src="../img/banzragch/enkhbayar/d_enkhbayar3.jpg"
+              alt="enkhbayar"
+            />
           </div>
           <div>
             <a
@@ -54,7 +119,7 @@
               class="btn btn-success btn-md active"
               role="button"
               aria-pressed="true"
-              >Аав <b>Дэмбэрэл</b></a
+              >Хүү <b>Энхбаяр</b></a
             >
             <a
               href="#"
@@ -67,116 +132,59 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-4">
-          <div>
-            <img class="huuhed" src="img/zurag6.jpg" alt="emee" />
-          </div>
-          <div>
-            <a
-              href="#"
-              class="btn btn-success btn-md active"
-              role="button"
-              aria-pressed="true"
-              >Охин <b>Дэмбэрэл</b></a
-            >
-            <a
-              href="#"
-              class="btn btn-primary btn-md active"
-              role="button"
-              aria-pressed="true"
-              >Танилцуулга</a
-            >
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div>
-            <img class="huuhed" src="img/zurag6.jpg" alt="emee" />
-          </div>
-          <div>
-            <a
-              href="#"
-              class="btn btn-success btn-md active"
-              role="button"
-              aria-pressed="true"
-              >Охин <b>Банзрагч</b></a
-            >
-            <a
-              href="banzragch/index.html"
-              class="btn btn-primary btn-md active"
-              role="button"
-              aria-pressed="true"
-              >Танилцуулга</a
-            >
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div>
-            <img class="huuhed" src="img/zurag6.jpg" alt="emee" />
-          </div>
-          <div>
-            <a
-              href="#"
-              class="btn btn-success btn-md active"
-              role="button"
-              aria-pressed="true"
-              >Аав <b>Дэмбэрэл</b></a
-            >
-            <a
-              href="#"
-              class="btn btn-primary btn-md active"
-              role="button"
-              aria-pressed="true"
-              >Танилцуулга</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-md-4">
-          <img class="huuhed" src="img/batochir/gerbul2.jpg" alt="bat-ochir" />
-        </div>
         <div class="col-md-4">
           <img
             class="huuhed"
-            src="img/banzragch/banzragch1.jpg"
-            alt="banzragch"
+            src="../img/banzragch/enkhtuya/enkhtuya1.jpg"
+            alt="enkhtuya"
           />
+          <div>
+            <a
+              href="#"
+              class="btn btn-success btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Охин <b>Энхтуяа</b></a
+            >
+            <a
+              href="#"
+              class="btn btn-primary btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Танилцуулга</a
+            >
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <img
+            class="huuhed"
+            src="../img/banzragch/enkhzaya/enkhzaya2.jpg"
+            alt="enkhzaya"
+          />
+          <div>
+            <a
+              href="#"
+              class="btn btn-success btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Охин <b>Энхзаяа</b></a
+            >
+            <a
+              href="#"
+              class="btn btn-primary btn-md active"
+              role="button"
+              aria-pressed="true"
+              >Танилцуулга</a
+            >
+          </div>
         </div>
       </div>
 
-      <div class="row justify-content-center">
-        <div class="col-md-4">
-          <img class="huuhed" src="img/batochir/gerbul2.jpg" alt="bat-ochir" />
-        </div>
-        <div class="col-md-4">
-          <img
-            class="huuhed"
-            src="img/banzragch/banzragch1.jpg"
-            alt="banzragch"
-          />
-        </div>
-        <div class="col-md-4">
-          <img
-            class="huuhed"
-            src="img/banzragch/banzragch1.jpg"
-            alt="banzragch"
-          />
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-md-4">
-          <img class="huuhed" src="img/batochir/gerbul2.jpg" alt="bat-ochir" />
-        </div>
-        <div class="col-md-4">
-          <img
-            class="huuhed"
-            src="img/banzragch/banzragch1.jpg"
-            alt="banzragch"
-          />
-        </div>
+     
       </div>
     </div>
-    <h1>End bugd bairlaana</h1>
+    <a href="../huuhed.html" class="btn btn-primary btn-lg active mt-4" role="button" aria-pressed="true">Буцах</a>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
